# worm

./: Cargo.toml  LICENSE  README.md
macro/: Cargo.toml
macro/src/: impl_filter.rs  impl_filter_wrapper.rs  impl_select.rs  lib.rs  worm_table.rs
macro/src/input/: field.rs  mod.rs  parse_utils.rs  sql_type.rs
src/: lib.rs  lib_worm.rs
tests/: filter.rs  sqlite.rs  statements.rs
