[package]
name = "worm-rust"
version = "0.1.0"
edition = "2021"
description = "A Rust macro that implements methods that wraps common SQL statements"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"], optional = true }
worm-rust-macro = { version = "0.1.0", path = "macro" }

[features]
rusqlite = [ "dep:rusqlite" ]

[dev-dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }

[workspace]
members = ["macro"]
