[package]
name = "worm"
version = "0.1.0"
edition = "2021"
description = "A Rust macro that implements methods that wraps common SQL statements"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib_worm.rs"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"], optional = true }
worm-macro = { version = "0.1.0", path = "macro" }

[features]
rusqlite = [ "dep:rusqlite" ]

[dev-dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }

[workspace]
members = ["macro"]
