[package]
name = "worm-macro"
version = "0.1.0"
edition = "2021"
description = "A Rust macro that implements methods that wraps common SQL statements"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib_worm_macro.rs"

[dependencies]
syn          = "1"
quote        = "1"
proc-macro2  = "1"
convert_case = "0.6"
proc-macro-error = "1.0.4"